--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3",
